fix spacing of ingredients title on mobile

--- a/src/App.css
+++ b/src/App.css
@@ -678,7 +678,10 @@ p > a {
   }
 
   .ingredients-title {
-    margin-left: 44px;
+    margin-left: 16px;
+    width: 300px;
+    margin-left: auto;
+    margin-right: auto;
   }
   
   .details-description {
